# brainfuck-assembler

./: License  README.md
assembler/: brainfuck_assembler_specification.txt  brainfuck_assembler_specification_2.txt  brainfuck_assembler_specification_3.txt  brainfuck_assembler_specification_4.txt  compiler.py  disasm.py  dumpview.py  init.basm  init.bobj  instructions.txt  linker.py  version.py
basm/: Makefile
basm/src/: ctf.basm  just_main.basm  test_bubble_sort.basm  test_bubble_sort_with_debug.basm  test_callfunc.basm  test_gets.basm  test_increment.basm  test_loadstr.basm  test_multiply.basm  test_recursive.basm  test_static_vars.basm
basm/src/lib/: gets.basm  puts.basm  read_int.basm  write_int.basm
codegen/: CMakeLists.txt  backward_stack.cpp  backward_stack.h  bf_to_c.cpp  byte_array.h  compressed_integer.h  crack_me.cpp  instructions.cpp  instructions.h  integer.h  interpreter.cpp  test_bool.cpp  test_byte_array.cpp  test_compressed.cpp  test_divmod.cpp  test_integer.cpp  test_is_negative.cpp  test_less_signed.cpp  test_tree_byte_array.cpp  tree_byte_array.h  util.cpp  util.h
immoral_programming/: immoral_programming.tex
